# qdjangoexample

./: CMakeLists.txt  Measure.cpp  Measure.h  README.txt  Sensor.cpp  Sensor.h  main.cpp
repositories/: IRepository.h  MeasureRepository.cpp  MeasureRepository.cpp~  MeasureRepository.h  MeasureRepository.h~  Persistence.cpp~  Persistence.h  SensorRepository.cpp  SensorRepository.h
